--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@ body {
   shape-rendering: crispEdges;
 }
 
+.x.axis line,
+.y.axis line {
+	stroke: lightgrey;
+	stroke-opacity: .5;
+}
+
 .x.axis path {
   display: none;
 }
@@ -69,12 +75,16 @@ var y = d3.scale.linear()
     .range([height, 0]);
 
 var xAxis = d3.svg.axis()
-    .scale(x)
+		.scale(x)
+		.tickSize(-height)
+		.tickPadding(10)
     .orient("bottom");
 
 var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left");
+		.scale(y)
+		.tickSize(-width)
+		.tickPadding(10)
+		.orient("left");
 
 var line = d3.svg.line()
     .x(function(d) { return x(d.date); })
