--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 
 .line {
   fill: none;
-	stroke: url(#capacity-gradient);
+	stroke: black;
   stroke-width: 2px;
 }
 
@@ -35,7 +35,12 @@ body {
 }
 
 .focus circle {
-	fill: black;
+  fill: none;
+	stroke: black;
+}
+
+.focus rect {
+	fill: white;
 }
 
 </style>
@@ -137,22 +142,6 @@ d3.csv("battery-log.csv", function(error, data) {
       .attr("dy", ".35em")
       .text(function(d) { return d.name; });
 
-	svg.append("linearGradient")
-      .attr("id", "capacity-gradient")
-      .attr("gradientUnits", "userSpaceOnUse")
-      .attr("x1", 0).attr("y1", y(0))
-      .attr("x2", 0).attr("y2", y(5200))
-    .selectAll("stop")
-      .data([
-        {offset: "0%", color: "red"},
-        {offset: "25%", color: "orange"},
-        {offset: "50%", color: "yellow"},
-        {offset: "100%", color: "green"}
-      ])
-    .enter().append("stop")
-      .attr("offset", function(d) { return d.offset; })
-      .attr("stop-color", function(d) { return d.color; });
-
   svg.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
@@ -167,6 +156,52 @@ d3.csv("battery-log.csv", function(error, data) {
       .attr("dy", ".71em")
       .style("text-anchor", "end")
       .text("Capacity (mAh)");
+
+	var focus = svg.append("g")
+      .attr("class", "focus")
+      .style("display", "none");
+
+  focus.append("circle")
+      .attr("r", 4.5);
+
+	var focus2 = svg.append("g")
+      .attr("class", "focus")
+      .style("display", "none");
+
+  focus2.append("circle")
+      .attr("r", 4.5);
+
+	var selector = svg.selectAll(".focus").append("g");
+
+	selector.append("rect")
+			.attr('width', 52)
+			.attr('height', 10)
+			.attr('x', 6)
+			.attr('y', -5)
+	selector.append("text")
+      .attr("x", 9)
+      .attr("dy", ".35em");
+
+  svg.append("rect")
+      .attr("class", "overlay")
+      .attr("width", width)
+      .attr("height", height)
+      .on("mouseover", function() { focus.style("display", null); focus2.style("display", null); })
+      .on("mouseout", function() { focus.style("display", "none"); focus2.style("display", "none"); })
+      .on("mousemove", mousemove);
+
+  function mousemove() {
+		formatValue = function(d) { return d + " mAh"; };
+    var x0 = x.invert(d3.mouse(this)[0]),
+        i = bisectDate(data, x0, 1),
+        d0 = data[i - 1],
+        d1 = data[i],
+        d = x0 - d0.date > d1.date - x0 ? d1 : d0;
+    focus.attr("transform", "translate(" + x(d.date) + "," + y(d["Current Capacity"]) + ")");
+    focus.select("text").text(formatValue(d["Current Capacity"]));
+    focus2.attr("transform", "translate(" + x(d.date) + "," + y(d["Max Capacity"]) + ")");
+    focus2.select("text").text(formatValue(d["Max Capacity"]));
+  }
 });
 
 </script>
